--- a/wwr/styles/style.css
+++ b/wwr/styles/style.css
@@ -5,13 +5,17 @@ Highlight: #f8f166
 Highlight: #2f64b0
 */
 
+
+
 body {
-    background-color: #fff;
+    background-color: #fcfbfb;
     font-family: Raleway, Arial, sans-serif;
-    font-size: 20px;
+    font-size: 22px;
     margin: 0;
     padding: 0;
-    
+}
+h2 {
+    margin: 0;
 }
 header {
     background-color: #214085
@@ -33,13 +37,13 @@ nav a:hover {
 nav a {
     text-decoration: none;
     color: #fcfbfb;
-    padding: 35px;
     text-align: center;
+    padding: 35px;
 }
 
 img.logo {
     margin-left: 15px;
-	width: 150px;
+	width: 80px;
     height: auto;
 	background-color: #f8f8e8;
 	padding-left: 2.5px;
@@ -67,15 +71,18 @@ nav {
     border-radius: 5px;
 }
 .home-title {
-    font-size: 40px;
-    grid-column: 2/8;
-    grid-row: 1/2;
-    justify-self: stretch;
-    text-align: center;
+    font-family: 'Rock Salt', 'Bradley Hand', sans-serif;
+    font-size: 2em;
 }
-
 .home-grid{
     margin-top: 60px;
+}
+
+.card-img {
+    border: 10px solid #214085;
+}
+main section img {
+    box-sizing: border-box;
 }
 
 
@@ -84,6 +91,10 @@ nav {
 
 
 }
+.msg {
+    background-color: #6f7364;
+    line-height: 1.5em;
+  }
 
 #hero{
     text-align: center;
